--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
-    background-color: 3B0270; /* Warna ungu */
+    background: linear-gradient(135deg, #6a5acd, #483d8b); 
     font-family: Arial, sans-serif; /* Jenis huruf yang bersih dan mudah dibaca */
-    color: #191970; /* Warna teks utama (Biru Gelap) */
+    color: #f0f8ff; /* Warna teks utama (Alice Blue, biar kontras di atas background gelap) */
 }
+
 .kartu-profil {
     width: 300px; 
     margin: 50px auto;      /* 50px jarak atas/bawah, auto menengahkan kiri/kanan */
