--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #FFFFE0; /* Warna kuning cerah */
+    background-color: #FFD700; /* emas */
     font-family: Arial, sans-serif; /* Jenis huruf yang bersih dan mudah dibaca */
     color: #191970; /* Warna teks utama (Biru Gelap) */
 }
